# mcp-paginate

./: Dockerfile  PLAN.md  README.md  ROADMAP.md  package-lock.json  package.json  server.mjs  tsconfig.json  tsup.config.ts
docs/: announcement.md  llm-prompts.md  migration.md  token-savings.md  typescript.md
examples/: demo-server.ts  edge-case-server.ts  real-api-server.ts
python/: README.md  pyproject.toml
python/examples/: demo_server.py  edge_case_server.py  real_api_server.py
python/mcp_pager/: __init__.py  chunk_store.py  paginate.py  tokenize.py  types.py
python/mcp_pager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/mcp_pager/backends/: memory.py  redis.py
python/tests/: test_chunk_store.py  test_paginate.py  test_tokenize.py
src/: chunk-store.ts  index.ts  paginate.ts  tiktoken.ts  tokenize.ts  types.ts
src/backends/: memory.ts  redis.ts
tests/: backends.test.ts  chunk-store.test.ts  edge-cases.test.ts  integration.test.ts  paginate.test.ts  tokenize.test.ts
